--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 div {
-    border: 1px solid black;
+    border: 1px solid white;
     display: inline-block;
     height: 220px;
     width: 200px;
